public/css/native.css
@import "./general.css";
:not(#blogCreatePage) .overlay {
    transition: all 150ms;
    opacity: 0;
    visibility: hidden;
    background-color: rgba(34, 34, 34, 0.8);
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100vh;
}
:not(#blogCreatePage) .overlay.overlay--active {
    opacity: 1;
    visibility: visible;
}
 body {
     font-size: 13px;
     font-family: 'Montserrat', serif;
 }
header > .container {
    padding: 40px 0;
}
:not(#blogCreatePage) .btn-light {
    background-color: var(--almost-white);
}
body:not(#blogCreatePage):not(#blogEditPage):not(#manageJobPage)
[class*='btn']:not(.search-service__btn):not(.btn-link):not([class*='profile-main__btn']) {
    font-weight: bold;
    border-color: transparent;
    border-radius: 7px;
    text-transform: capitalize;
    display: inline-flex;
    justify-content: center;
    align-items: center;
    transition: all 150ms;
    padding: 10px 1rem;
    cursor: pointer;
    background-color: var(--almost-white);
}

body:not(#blogCreatePage):not(#blogEditPage):not(#manageJobPage)
[class*='btn']:not(.search-service__btn):not(.btn-link):not([class*='profile-main__btn']):disabled {
    opacity: 0.8;
    cursor: not-allowed;
}

:not(#blogCreatePage):not(#blogEditPage) .btn-light:hover {
    background-color: #e2e6ea !important;
}
:not(#blogCreatePage):not(#blogEditPage) .slick-arrow {
    font-size: 34px;
    z-index: 1;
}
body:not(#blogCreatePage):not(#blogEditPage) .bxs-chevron-left {
    left: 15px;
}
:not(#blogCreatePage):not(#blogEditPage) .bxs-chevron-right {
    right: 15px;
}
.container {
    width: 90% !important;
}
body:not(#blogCreatePage) .card {
    box-shadow: 0 2px 20px 0 rgba(0,0,0,0.1);
}
body:not(#blogCreatePage) .card__img {
    margin-left: auto;
    margin-right: auto;
    width: 100%;
    object-fit: cover;
    max-height: 400px;
    display: block;
}
body:not(#blogCreatePage) .card__heading {
    font-size: 2rem;
    color: #333233;
}
body:not(#blogCreatePage) .card__img--circle {
    border-radius: 50%;
}
body:not(#blogCreatePage) .card__header {
    color: #3d3d3d;
    padding: 20px 20px 0;
}
body:not(#blogCreatePage) .card__body {
    padding: 20px;
    flex-grow: 1;
    border-radius: 0 0 10px 10px;
}

body:not(#blogCreatePage) .card__header, body:not(#blogCreatePage) .card__body {
    border-right: 1px solid #dbdbdb;
    border-left: 1px solid #dbdbdb;
}

nav {
    width: 100%;
    z-index: 2;
    transition: all 150ms;
}
nav ul {
    margin-bottom: 0;
}
.bg-default {
    background-color: #2f507a;
    color: var(--almost-white);
}
.bg-light {
    background-color: #f4f4f4;
    color: var(--text-color);
}
.bg-danger {
    background-color: crimson;
    color: var(--almost-white);
}
.bg-warning {
    background-color: var(--fourth-color);
    color: var(--text-color);
}
.bg-success {
    background-color: var(--primary-color);
    color: var(--almost-white);
}
.bg-info {
    background-color: var(--third-color);
    color: var(--almost-white);
}
.nav--showed {
    position: fixed;
    padding-bottom: 15px;
    background-color: #fff;
    box-shadow: 0 10px 25px rgba(0, 0, 0, 0.13) !important;
    top: 0;
}
nav .container {
    max-width: none;
    display: flex;
    flex-direction: column;
    height: 100%;
    padding: 0;
}
.nav__toggle {
    color: var(--almost-white);
    font-size: 30px;
}
.nav__list {
    background-color: inherit;
    transition: all 150ms;
    display: flex;
    align-items: center;
    color: #fff;
    text-shadow: 2px 3px rgba(52, 52, 52, 0.5);
    overflow: hidden;
}
.nav__list:not(.nav__list--logo) {
    max-height: 0;
    padding: 0;
    position: relative;
    text-transform: capitalize;
}
.nav__list:not(.nav__list--logo):hover {
    text-shadow: none;
}
.nav__list:not(.nav__list--logo):not(.nav__list--dropdown):not(.nav__list--search)::after {
    content: '';
    position: absolute;
    bottom: 0;
    width: 0;
    left: 0;
    transition: all 350ms;
    height: 3px;
}
.nav__list:not(.nav__list--logo):not(.nav__list--search):hover::after {
    width: 100%;
}
.nav__list--separate:hover::after {
    width: calc(100% - 20px) !important;
}
.nav__list--dropdown {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
}
.nav__list--dropdown .dropdown-icon {
    transition: all 150ms;
    margin-left: 10px;
}
.nav-dropdown-list {
    width: 0;
    overflow: hidden;
    max-height: 0;
    transition: max-height 150ms;
    padding-left: 20px;
    flex-direction: column;
}
.nav-dropdown-list.nav-dropdown-list--showed {
    max-height: none;
    z-index: 2;
    width: 150%;
    padding-top: 10px;
}
.nav--showed .nav__list:not(.nav__list--logo) .nav-dropdown-list__item:first-child {
    padding-top: 20px;
}
.nav--showed .nav-dropdown-list--showed .dropdown-icon {
    transform: rotate(180deg);
}
.nav__link {
    flex-grow: 1;
    cursor: pointer;
    display: flex;
    height: 100%;
    align-items: center;
    color: inherit;
}
.nav__link:hover {
    color: inherit;
    text-decoration: none;
}
.nav__list--logo {
    font-family: 'Montserrat', sans-serif;
    color: #e7e7e7;
    font-size: 35px;
    font-weight: 600;
    height: 80px;
}
body[id^='blog'] .nav__list--logo {
    font-size: 1em;
}
.nav--showed .nav__list--search {
    margin: 0;
}
.nav--showed .nav__list:not(.nav__list--logo) {
    max-height: none;
    padding: 10px 0;
}
.nav--showed .nav__list {
    text-shadow: none;
    color: #383838;
}
body[id^='blog'] .nav--showed .nav__list {
    color: var(--almost-white);
}
.nav--showed .nav__list--logo {
    color: #383838;
}
.nav__list--search {
    flex-grow: 1;
}
.search-service {
    position: relative;
    display: flex;
}
.nav--showed .search-service {
    width: 100%;
}
.search-service__input {
    height: 50px;
    padding: 0 calc(50px + 1.5rem) 0 1.5rem;
    width: 100%;
    border: 1px solid #c7c7c7;
    border-radius: 2rem;
}
/* ... */

